# FAVAR

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README-PYPI.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
examples/: synthetic_demo.py
notebooks/: favar_synthetic_walkthrough.ipynb
scripts/: create_public_preview.py
src/favar/: __init__.py  factor.py  model.py  order_selection.py  results.py  summary.py
tests/: test_favar.py
