[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "favar"
version = "0.1.1"
description = "Factor-Augmented Vector Autoregression (FAVAR) for empirical macroeconomic research"
authors = [{name = "Jonas Santos Siqueira"}]
readme = "README-PYPI.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "scipy>=1.9",
    "statsmodels>=0.14",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Jonas-Santos-Siqueira/FAVAR"
Repository = "https://github.com/Jonas-Santos-Siqueira/FAVAR"
Issues = "https://github.com/Jonas-Santos-Siqueira/FAVAR/issues"

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
test = ["pytest>=7.0"]
dev = ["build>=1.0", "pytest>=7.0", "twine>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
